--- a/templates/main_page.html.twig
+++ b/templates/main_page.html.twig
@@ -21,6 +21,10 @@
                         <a class="nav-link" href="#">Kontakt</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ path('add_post') }}">Utwórz Post</a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_logout') }}">Wyloguj</a>
                     </li>
                 </ul>
@@ -33,39 +37,23 @@
             <div class="col-md-8 offset-md-2">
                 <h1 class="text-center my-4">Witaj w naszym blogu!</h1>
 
-                {% for post in posts %}
+                {% for post in pagination.items %}
                     <div class="card mb-4">
                         <div class="card-body">
                             <h5 class="card-title">{{ post.title }}</h5>
                             <p class="card-text">{{ post.content|slice(0, 100) }}...</p>
-                            <a href="{{ path('show_post', {'id': post.id}) }}" class="btn btn-primary">Czytaj więcej</a>
+{#                            <a href="{{ path('show_post', {'id': post.id}) }}" class="btn btn-primary">Czytaj więcej</a>#}
                         </div>
                     </div>
+                {% else %}
+                    <p>Brak dostępnych postów do wyświetlenia.</p>
                 {% endfor %}
 
-                <!-- Dodaj więcej kart artykułów w podobny sposób -->
-
-                <nav aria-label="Pagination">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item disabled">
-                            <span class="page-link">&laquo;</span>
-                        </li>
-                        <li class="page-item active">
-                            <span class="page-link">1</span>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">2</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">3</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">&raquo;</a>
-                        </li>
-                    </ul>
-                </nav>
+                <!-- Renderowanie dynamicznej paginacji -->
+                <div class="navigation text-center">
+                    {{ knp_pagination_render(pagination) }}
+                </div>
             </div>
         </div>
     </div>
-
 {% endblock %}
