--- a/templates/main_page.html.twig
+++ b/templates/main_page.html.twig
@@ -21,7 +21,7 @@
                         <a class="nav-link" href="#">Kontakt</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Kategorie</a>
+                        <a class="nav-link" href="{{ path('category_list') }}">Kategorie</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('add_post') }}">Utwórz Post</a>
