--- a/templates/Post/add.html.twig
+++ b/templates/Post/add.html.twig
@@ -3,12 +3,12 @@
 {% block title %}Dodaj Post{% endblock %}
 
 {% block body %}
-    <div class="container mt-4">
-        <h1 class="text-center">Dodaj Nowy Post</h1>
+    <h1>Dodaj nowy Post</h1>
 
-        {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button class="btn btn-primary" type="submit">Dodaj Post</button>
-        {{ form_end(form) }}
-    </div>
+    {{ form_start(form) }}
+{#    {{ form_row(form.Title) }}#}
+    {{ form_row(form.content) }}
+    {{ form_row(form.categories) }}
+{#    <button class="btn btn-primary">Zapisz</button>#}
+    {{ form_end(form) }}
 {% endblock %}
