--- a/templates/Post/show.html.twig
+++ b/templates/Post/show.html.twig
@@ -28,6 +28,29 @@
                 </form>
 
                 <a href="{{ path('main_page') }}" class="btn btn-primary">Powrót do listy</a>
+
+                <hr>
+
+                <h3>Dodaj komentarz:</h3>
+                {{ form_start(commentForm) }}
+                {{ form_widget(commentForm) }}
+                {{ form_end(commentForm) }}
+
+                <hr>
+
+                <h3>Komentarze:</h3>
+                {% if post.comments is not empty %}
+                    <ul>
+                        {% for comment in post.comments %}
+                            <li>
+                                <strong>{{ comment.nick }} ({{ comment.email }}):</strong>
+                                <p>{{ comment.content }}</p>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <p>Brak komentarzy do tego posta.</p>
+                {% endif %}
             </div>
         </div>
     </div>
