--- a/templates/main_page.html.twig
+++ b/templates/main_page.html.twig
@@ -1,6 +1,7 @@
+{# templates/main_page.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Blog{% endblock %}
+{% block title %}Witaj na blogu{% endblock %}
 
 {% block body %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -12,20 +13,12 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Strona główna <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">O nas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Kontakt</a>
+                        <a class="nav-link" href="{{ path('main_page') }}">Strona główna <span class="sr-only">(current)</span></a>
                     </li>
                     {% if is_granted('ROLE_ADMIN') %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('category_list') }}">Kategorie</a>
-                    </li>
-                    {% endif %}
-                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('category_list') }}">Kategorie</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('add_post') }}">Utwórz Post</a>
                         </li>
@@ -49,7 +42,14 @@
             <div class="col-md-8 offset-md-2">
                 <h1 class="text-center my-4">Witaj w naszym blogu!</h1>
 
-                {% for post in pagination.items %}
+                <div class="mb-4">
+                    {{ form_start(form) }}
+                    {{ form_row(form.category) }}
+                    {{ form_row(form.search) }}
+                    {{ form_end(form) }}
+                </div>
+
+                {% for post in pagination %}
                     <div class="card mb-4">
                         <div class="card-body">
                             <h5 class="card-title">{{ post.title }}</h5>
