--- a/templates/Category/list.html.twig
+++ b/templates/Category/list.html.twig
@@ -11,8 +11,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Strona główna</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ path('main_page') }}">Strona główna <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">O nas</a>
