--- a/templates/Post/add.html.twig
+++ b/templates/Post/add.html.twig
@@ -3,12 +3,25 @@
 {% block title %}Dodaj Post{% endblock %}
 
 {% block body %}
-    <h1>Dodaj nowy Post</h1>
+    <div class="container">
+        <h1 class="my-4">Dodaj nowy Post</h1>
 
-    {{ form_start(form) }}
-{#    {{ form_row(form.Title) }}#}
-    {{ form_row(form.content) }}
-    {{ form_row(form.categories) }}
-{#    <button class="btn btn-primary">Zapisz</button>#}
-    {{ form_end(form) }}
+        {{ form_start(form, {'attr': {'class': 'form'}}) }}
+
+        <div class="form-group">
+            {{ form_label(form.content, 'Treść') }}
+            {{ form_widget(form.content, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.content) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.categories, 'Kategorie') }}
+            {{ form_widget(form.categories, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.categories) }}
+        </div>
+
+        <button type="submit" class="btn btn-primary">Zapisz</button>
+
+        {{ form_end(form) }}
+    </div>
 {% endblock %}
