--- a/templates/main_page.html.twig
+++ b/templates/main_page.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Blog</a>
+            <a class="navbar-brand" href="{{ path('main_page') }}">Blog</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -21,6 +21,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('add_post') }}">Utwórz Post</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('admin_edit_user') }}">Edytuj Profil</a>
                         </li>
                     {% endif %}
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
@@ -43,9 +46,13 @@
                 <h1 class="text-center my-4">Witaj w naszym blogu!</h1>
 
                 <div class="mb-4">
-                    {{ form_start(form) }}
-                    {{ form_row(form.category) }}
-                    {{ form_row(form.search) }}
+                    {{ form_start(form, { 'attr': { 'class': 'form-inline' } }) }}
+                    <div class="form-group mr-2">
+                        {{ form_row(form.category, { 'attr': { 'class': 'form-control' } }) }}
+                    </div>
+                    <div class="form-group mr-2">
+                        {{ form_row(form.search, { 'attr': { 'class': 'btn btn-primary' } }) }}
+                    </div>
                     {{ form_end(form) }}
                 </div>
 
