--- a/templates/Post/add.html.twig
+++ b/templates/Post/add.html.twig
@@ -1,26 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Dodaj Post{% endblock %}
+{% block title %}
+    {{ 'post.add.title'|trans }}
+{% endblock %}
 
 {% block body %}
     <div class="container">
-        <h1 class="my-4">Dodaj nowy Post</h1>
+        <h1 class="my-4">{{ 'post.add.heading'|trans }}</h1>
 
         {{ form_start(form, {'attr': {'class': 'form'}}) }}
 
         <div class="form-group">
-            {{ form_label(form.content, 'Treść') }}
-            {{ form_widget(form.content, {'attr': {'class': 'form-control'}}) }}
+            {{ form_label(form.title, 'form.label.title'|trans) }}
+            {{ form_widget(form.title, {'attr': {'class': 'form-control', 'placeholder': 'form.placeholder.title'|trans}}) }}
+            {{ form_errors(form.title) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.content, 'form.label.content'|trans) }}
+            {{ form_widget(form.content, {'attr': {'class': 'form-control', 'placeholder': 'form.placeholder.content'|trans}}) }}
             {{ form_errors(form.content) }}
         </div>
 
         <div class="form-group">
-            {{ form_label(form.categories, 'Kategorie') }}
+            {{ form_label(form.categories, 'form.label.categories'|trans) }}
             {{ form_widget(form.categories, {'attr': {'class': 'form-control'}}) }}
             {{ form_errors(form.categories) }}
         </div>
 
-        <button type="submit" class="btn btn-primary">Zapisz</button>
 
         {{ form_end(form) }}
     </div>
