--- a/templates/main_page.html.twig
+++ b/templates/main_page.html.twig
@@ -1,38 +1,38 @@
 {# templates/main_page.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Witaj na blogu{% endblock %}
+{% block title %}{{ 'title.welcome_blog'|trans }}{% endblock %}
 
 {% block body %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{{ path('main_page') }}">Blog</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="{{ path('main_page') }}">{{ 'menu.blog'|trans }}</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="{{ 'navbar.toggle_navigation'|trans }}">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="{{ path('main_page') }}">Strona główna <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{{ path('main_page') }}">{{ 'menu.home'|trans }} <span class="sr-only">({{ 'menu.current'|trans }})</span></a>
                     </li>
                     {% if is_granted('ROLE_ADMIN') %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('category_list') }}">Kategorie</a>
+                            <a class="nav-link" href="{{ path('category_list') }}">{{ 'menu.categories'|trans }}</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('add_post') }}">Utwórz Post</a>
+                            <a class="nav-link" href="{{ path('add_post') }}">{{ 'menu.create_post'|trans }}</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('admin_edit_user') }}">Edytuj Profil</a>
+                            <a class="nav-link" href="{{ path('admin_edit_user') }}">{{ 'menu.edit_profile'|trans }}</a>
                         </li>
                     {% endif %}
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_logout') }}">Wyloguj</a>
+                            <a class="nav-link" href="{{ path('app_logout') }}">{{ 'menu.logout'|trans }}</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_login') }}">Zaloguj</a>
+                            <a class="nav-link" href="{{ path('app_login') }}">{{ 'menu.login'|trans }}</a>
                         </li>
                     {% endif %}
                 </ul>
@@ -43,7 +43,7 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <h1 class="text-center my-4">Witaj w naszym blogu!</h1>
+                <h1 class="text-center my-4">{{ 'header.welcome_blog'|trans }}</h1>
 
                 <div class="mb-4">
                     {{ form_start(form, { 'attr': { 'class': 'form-inline' } }) }}
@@ -61,20 +61,20 @@
                         <div class="card-body">
                             <h5 class="card-title">{{ post.title }}</h5>
                             <p class="card-text">{{ post.content|slice(0, 100) }}...</p>
-                            <a href="{{ path('post_show', {'id': post.id}) }}" class="btn btn-primary">Czytaj więcej</a>
+                            <a href="{{ path('post_show', {'id': post.id}) }}" class="btn btn-primary">{{ 'button.read_more'|trans }}</a>
 
                             {% if is_granted('ROLE_ADMIN') %}
-                                <a href="{{ path('post_edit', {'id': post.id}) }}" class="btn btn-secondary">Edytuj</a>
+                                <a href="{{ path('post_edit', {'id': post.id}) }}" class="btn btn-secondary">{{ 'button.edit'|trans }}</a>
 
-                                <form method="post" action="{{ path('post_delete', {'id': post.id}) }}" onsubmit="return confirm('Czy na pewno chcesz usunąć ten post?');" style="display:inline-block;">
+                                <form method="post" action="{{ path('post_delete', {'id': post.id}) }}" onsubmit="return confirm('{{ 'confirm.delete_post'|trans }}');" style="display:inline-block;">
                                     <input type="hidden" name="_token" value="{{ csrf_token('delete-post' ~ post.id) }}">
-                                    <button class="btn btn-danger" type="submit">Usuń</button>
+                                    <button class="btn btn-danger" type="submit">{{ 'button.delete'|trans }}</button>
                                 </form>
                             {% endif %}
                         </div>
                     </div>
                 {% else %}
-                    <p>Brak dostępnych postów do wyświetlenia.</p>
+                    <p>{{ 'message.no_posts'|trans }}</p>
                 {% endfor %}
 
                 <div class="navigation text-center">
