--- a/templates/main_page.html.twig
+++ b/templates/main_page.html.twig
@@ -48,10 +48,10 @@
                 <div class="mb-4">
                     {{ form_start(form, { 'attr': { 'class': 'form-inline' } }) }}
                     <div class="form-group mr-2">
-                        {{ form_row(form.category, { 'attr': { 'class': 'form-control' } }) }}
+                        {{ form_row(form.category, { 'attr': { 'class': 'form-control', 'placeholder': 'category_placeholder'|trans } }) }}
                     </div>
                     <div class="form-group mr-2">
-                        {{ form_row(form.search, { 'attr': { 'class': 'btn btn-primary' } }) }}
+                        {{ form_row(form.search, { 'attr': { 'class': 'btn btn-primary', 'label': 'search_button'|trans } }) }}
                     </div>
                     {{ form_end(form) }}
                 </div>
