--- a/templates/main_page.html.twig
+++ b/templates/main_page.html.twig
@@ -48,7 +48,8 @@
                 <div class="mb-4">
                     {{ form_start(form, { 'attr': { 'class': 'form-inline' } }) }}
                     <div class="form-group mr-2">
-                        {{ form_row(form.category, { 'attr': { 'class': 'form-control', 'placeholder': 'category_placeholder'|trans } }) }}
+                        {{ form_row(form.category, { 'label': 'form.label.category'|trans, 'attr': { 'class': 'form-control' } }) }}
+
                     </div>
                     <div class="form-group mr-2">
                         {{ form_row(form.search, { 'attr': { 'class': 'btn btn-primary', 'label': 'search_button'|trans } }) }}
