--- a/templates/main_page.html.twig
+++ b/templates/main_page.html.twig
@@ -49,7 +49,6 @@
                     {{ form_start(form, { 'attr': { 'class': 'form-inline' } }) }}
                     <div class="form-group mr-2">
                         {{ form_row(form.category, { 'label': 'form.label.category'|trans, 'attr': { 'class': 'form-control' } }) }}
-
                     </div>
                     <div class="form-group mr-2">
                         {{ form_row(form.search, { 'attr': { 'class': 'btn btn-primary', 'label': 'search_button'|trans } }) }}
@@ -66,11 +65,7 @@
 
                             {% if is_granted('ROLE_ADMIN') %}
                                 <a href="{{ path('post_edit', {'id': post.id}) }}" class="btn btn-secondary">{{ 'button.edit'|trans }}</a>
-
-                                <form method="post" action="{{ path('post_delete', {'id': post.id}) }}" onsubmit="return confirm('{{ 'confirm.delete_post'|trans }}');" style="display:inline-block;">
-                                    <input type="hidden" name="_token" value="{{ csrf_token('delete-post' ~ post.id) }}">
-                                    <button class="btn btn-danger" type="submit">{{ 'button.delete'|trans }}</button>
-                                </form>
+                                {% include 'post/delete_post_form.html.twig' with { 'post': post } %}
                             {% endif %}
                         </div>
                     </div>
