--- a/templates/Category/delete_form.html.twig
+++ b/templates/Category/delete_form.html.twig
@@ -1,6 +1,7 @@
-{# templates/category/delete_form.html.twig #}
-<form method="post" action="{{ path('category_delete', {'id': category.id}) }}" style="display:inline-block;">
-    <input type="hidden" name="_method" value="DELETE">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete-category' ~ category.id) }}">
-    <button class="btn btn-danger" type="submit">{{ 'category.delete'|trans }}</button>
-</form>
+{% include 'default/form.html.twig' with {
+    'action': path('category_delete', {'id': category.id}),
+    'form_id': 'delete-form-' ~ category.id,
+    'csrf_token': csrf_token('delete-category' ~ category.id),
+    'button_text': 'category.delete'|trans,
+    'method': 'DELETE'
+} %}
